[package]
name = "aparat-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
inline_colorization = "0.1.6"
regex = "1.5"
reqwest = { version = "0.11.24", features = ["default", "json", "blocking"] }
serde_json = "1.0.113"
indicatif = "0.17.0"
